--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -39,7 +39,7 @@
 				TJHSST in the DC area.
 				</p>
 			<br>
-			<p>You can find my resume <a href="./resources/resume.pdf">here</a>.</p>
+			<p>You can find my resume <a href="./resources/resume.pdf" target="_blank">here</a>.</p>
 			<br>
 			<p>Programming Languages:</p>
 			<ul>
@@ -49,9 +49,9 @@
 		</div>
 
 		<footer>
-			<a href="mailto: militsasotirova@gmail.com"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
+			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
+			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
 		</footer>
 	</body>
 </html>
