--- a/views/education.html
+++ b/views/education.html
@@ -36,9 +36,9 @@
 		</div>
 
 		<footer>
-			<a href="mailto: militsasotirova@gmail.com"><img src="../images/black-mail.png" title="email" alt="email"></a>
-			<a href="https://github.com/militsasotirova"><img src="../images/black-github.png" title="github" alt="github"></a>
-			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
+			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
+			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
+			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
 		</footer>
 	</body>
 </html>
