--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 				<a href="./home.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="./home.html"><h1>Militsa Sotirova</h1></a>
+				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
 
 				<div class="grid-container">
 		        <div class="grid-item">
@@ -43,8 +43,10 @@
 			<br>
 			<p>Programming Languages:</p>
 			<ul>
-				<item>Java</item>
-				<
+				<li>Java</li>
+				<li>Python</li>
+				<li>Go</li>
+				<li>HTML/CSS</li>
 			</ul>
 		</div>
 
