--- a/views/experience.html
+++ b/views/experience.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 				<a href="./home.html"><img src="../images/face.jpg" alt="headshot"></a>
-				<a href="./home.html"><h1>Militsa Sotirova</h1></a>
+				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
 
 				<div class="grid-container">
 						<div class="grid-item">
