--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-				<a href="./home.html"><img src="../images/face.jpg" alt="headshot"></a>
+				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
 				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
 
 				<div class="grid-container">
@@ -32,25 +32,40 @@
 		</header>
 
 		<div class="page-content">
-			<p>Hello!</p>
-			<br>
-			<p>I am a second year student at Cornell University (Engineering School) pursuing a major in Computer Science
-				and a minor in Business. I've been interested in math and computer science since my freshman year of high school at
-				TJHSST in the DC area.
-				</p>
-			<br>
-			<p>You can find my resume <a href="./resources/resume.pdf" target="_blank">here</a>.</p>
-			<br>
-			<p>Programming Languages:</p>
-			<ul>
-				<li>Java</li>
-				<li>Python</li>
-				<li>Go</li>
-				<li>HTML/CSS</li>
-			</ul>
+			<div class="aboutme-grid-container">
+	        <div class="aboutme-grid-item">
+						<p>Hello!</p>
+						<br>
+						<p>I am a second year student at Cornell University (Engineering School) pursuing a major in Computer Science
+							and a minor in Business. I've been interested in math and computer science since my freshman year of high school at
+							TJHSST in the DC area. </p>
+						<br>
+						<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS), which
+						is a simulation that models nutrient flow through a farm system based on user inputs as well as published research.
+						More information can be found <a href="./experience.html">here</a>.</p>
+						<br>
+						<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the physics
+							of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim teams
+							and helped kids learn how to swim and be part of a team environment.</p>
+					</div>
+
+					<div class="aboutme-grid-item">
+						<p>You can find my resume <a href="./resources/resume.pdf" target="_blank">here</a>.</p>
+						<br>
+						<p>Programming Languages:</p>
+						<ul>
+							<li>Java</li>
+							<li>Python</li>
+							<li>Go</li>
+							<li>HTML/CSS</li>
+							<li>familiar with C (MPI)</li>
+						</ul>
+					</div>
+			</div>
 		</div>
 
 		<footer>
+			<h3>Contact Me:</h3>
 			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
 			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
 			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
