--- a/views/education.html
+++ b/views/education.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-				<a href="./home.html"><img src="../images/face.jpg" alt="headshot"></a>
+				<a href="../index.html"><img src="../images/face.jpg" alt="headshot"></a>
 				<a href="../index.html"><h1>Militsa Sotirova</h1></a>
 
 				<div class="grid-container">
@@ -36,6 +36,7 @@
 		</div>
 
 		<footer>
+			<h3>Contact Me:</h3>
 			<a href="mailto: militsasotirova@gmail.com" target="_blank"><img src="../images/black-mail.png" title="email" alt="email"></a>
 			<a href="https://github.com/militsasotirova" target="_blank"><img src="../images/black-github.png" title="github" alt="github"></a>
 			<a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank"><img src="../images/black-linkedin.png" title="linkedin" alt="linkedin"></a>
