--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -50,7 +50,7 @@
 					</div>
 
 					<div class="aboutme-grid-item">
-						<p>You can find my resume <a href="./resources/resume.pdf" target="_blank">here</a>.</p>
+						<p>You can find my resume <a href="../resources/resume.pdf" target="_blank">here</a>.</p>
 						<br>
 						<p>Programming Languages:</p>
 						<ul>
