--- a/views/education.html
+++ b/views/education.html
@@ -32,7 +32,23 @@
 		</header>
 
 		<div class="page-content">
-			<p>education</p>
+			<div class="education-grid-container">
+	        <div class="education-grid-item">
+						<img src="../images/cornell_seal_simple_black.svg" class="education-image" title="cornell" alt="cornell">
+					</div>
+
+					<div class="education-grid-item">
+
+					</div>
+
+					<div class="education-grid-item">
+									<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
+					</div>
+
+					<div class="education-grid-item">
+
+					</div>
+			</div>
 		</div>
 
 		<footer>
