--- a/styles/pages.css
+++ b/styles/pages.css
@@ -104,3 +104,20 @@ ul {
 .aboutme-grid-item {
   margin: auto;
 }
+
+.education-image {
+  height: 250px;
+  width: 250px;
+}
+
+.education-grid-container {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  justify-content: center;
+  grid-gap: 50px;
+}
+
+.education-grid-item {
+  margin: auto;
+}
