--- a/views/education.html
+++ b/views/education.html
@@ -38,15 +38,39 @@
 					</div>
 
 					<div class="education-grid-item">
-
+						<h1>Cornell University</h1>
+						<h2><strong>School of Engineering<strong>: B.S. Computer Science, Business minor</h2>
+						<p>Coursework:</p>
+						<ul>
+							<li>Data Structures and Functional Programming (CS 3110)</li>
+							<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
+							<li>Object-Oriented Design and Data Structures – Honors (CS 2112)</li>
+							<li>Discrete Structures (CS 2800)</li>
+							<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
+							<li>Linear Algebra for Engineers (MATH 2940)</li>
+							<li>Multivariable Calculus for Engineers (MATH 1920)</li>
+							<li>Mechanics/Electromagnetism (PHYS 1112/2213)</li>
+							<li>Finance (HADM 2250)</li>
+							<li>Financial Accounting (AEM 2210)</li>
+						</ul>
 					</div>
 
 					<div class="education-grid-item">
-									<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
+								<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
 					</div>
 
 					<div class="education-grid-item">
-
+						<h1>Thomas Jefferson High School for Science and Technology (TJHSST)</h1>
+						<h2><strong>Computer Systems<strong>: TJHSST Advanced Diploma</h2>
+						<p>Coursework:</p>
+						<ul>
+							<li>Computer Systems Research Lab</li>
+							<li>Parallel Computing</li>
+							<li>Cryptography</li>
+							<li>Artificial Intelligence</li>
+							<li>Computer Vision</li>
+							<li>Mobile Application Development</li>
+						</ul>
 					</div>
 			</div>
 		</div>
