--- a/styles/pages.css
+++ b/styles/pages.css
@@ -97,7 +97,7 @@ ul {
 .aboutme-grid-container {
   margin: auto;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 2fr;
   justify-content: center;
 }
 
@@ -113,11 +113,14 @@ ul {
 .education-grid-container {
   margin: auto;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 6fr;
+  grid-row: auto auto;
   justify-content: center;
-  grid-gap: 50px;
+  grid-gap: 90px;
+  border: 1px solid #C9E4CA;
 }
 
 .education-grid-item {
-  margin: auto;
+  line-height: 40px;
+  border: 1px solid #C9E4CA;
 }
