fixed&finished education

--- a/views/education.html
+++ b/views/education.html
@@ -38,13 +38,13 @@
 					</div>
 
 					<div class="education-grid-item">
-						<h1>Cornell University</h1>
-						<h2><strong>School of Engineering<strong>: B.S. Computer Science, Business minor</h2>
+						<h2>Cornell University</h2>
+						<h3><strong>School of Engineering</strong>: B.S. Computer Science, Business minor</h3>
 						<p>Coursework:</p>
 						<ul>
 							<li>Data Structures and Functional Programming (CS 3110)</li>
 							<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
-							<li>Object-Oriented Design and Data Structures – Honors (CS 2112)</li>
+							<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
 							<li>Discrete Structures (CS 2800)</li>
 							<li>The Computing Technology Inside Your Smartphone (ENGRI 1210)</li>
 							<li>Linear Algebra for Engineers (MATH 2940)</li>
@@ -59,9 +59,9 @@
 								<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
 					</div>
 
-					<div class="education-grid-item">
-						<h1>Thomas Jefferson High School for Science and Technology (TJHSST)</h1>
-						<h2><strong>Computer Systems<strong>: TJHSST Advanced Diploma</h2>
+					<div class="education-grid-item" id="tjhsst">
+						<h2>Thomas Jefferson High School for Science and Technology (TJHSST)</h2>
+						<h3><strong>Computer Systems<strong>: TJHSST Advanced Diploma</h3>
 						<p>Coursework:</p>
 						<ul>
 							<li>Computer Systems Research Lab</li>
