--- a/views/education.html
+++ b/views/education.html
@@ -39,7 +39,8 @@
 
 					<div class="education-grid-item">
 						<h2>Cornell University</h2>
-						<h3><strong>School of Engineering</strong>: B.S. Computer Science, Business minor</h3>
+						<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
+						<p>August 2018 - May 2022</p>
 						<p>Coursework:</p>
 						<ul>
 							<li>Data Structures and Functional Programming (CS 3110)</li>
@@ -59,9 +60,10 @@
 								<img src="../images/tjhsst.png" class="education-image" title="tjhsst" alt="tjhsst">
 					</div>
 
-					<div class="education-grid-item" id="tjhsst">
-						<h2>Thomas Jefferson High School for Science and Technology (TJHSST)</h2>
-						<h3><strong>Computer Systems<strong>: TJHSST Advanced Diploma</h3>
+					<div class="education-grid-item">
+						<h2>Thomas Jefferson High School for Science & Technology (TJHSST)</h2>
+						<h3><strong>Computer Systems</strong>: TJHSST Advanced Diploma</h3>
+						<p>August 2014 - May 2018</p>
 						<p>Coursework:</p>
 						<ul>
 							<li>Computer Systems Research Lab</li>
