--- a/views/projects.html
+++ b/views/projects.html
@@ -33,6 +33,12 @@
 
 		<div class="page-content">
 			<p>projects</p>
+			<p>this website</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/vwczaF5nrdU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<a href="https://youtu.be/vwczaF5nrdU" target="_blank"><p>Video Link</p></a>
+			<a href="../resources/Reading_Level_Analysis.pdf"><p>Paper</p></a>
+			<a href="../resources/Poster.pdf"><p>Poster</p></a>
+			<p>put link to github</p>
 		</div>
 
 		<footer>
