--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -57,6 +57,9 @@
 						is a simulation that models nutrient flow through a farm system based on user inputs as well as published research.
 						More information can be found <a href="./experience.html">here</a>.</p>
 						<br>
+						<p>During my senior year of high school, I conducted a research project from start to finish to create a formula to
+							analyze the reading level of text. More information can be found <a href="./experience.html">here</a>.</p>
+						<br>
 						<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the physics
 							of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim teams
 							and helped kids learn how to swim and be part of a team environment.</p>
