--- a/views/experience.html
+++ b/views/experience.html
@@ -32,7 +32,61 @@
 		</header>
 
 		<div class="page-content">
-			<p>experience</p>
+			<div class="experience-grid-container">
+	        <div class="experience-grid-item">
+						<h1><strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS)</h1>
+						<p>November, 2018 - PRESENT</p>
+						<p>Cornell University</p>
+					</div>
+
+					<div class="experience-grid-item">
+						<p>RuFaS is a simulation written in Python that models nutrient flow through a farm system based
+							on user inputs as well as published research. There are four main modules: animal, soil, manure,
+							and crop, and I primarily work in the animal module. Throughout my time on this project,
+							I have learned a lot. This is an interdisciplinary project, as it is a computer simulation of an
+							animal/farm system. However, even I have no background in animal or farm science, I have been
+							able to contribute a significant amount to the code base for the simulation:</p>
+						<ul>
+							<li>I am currently looking into ways of optimizing and parallelizing the code to improve performance.</li>
+							<li>I restructured the entire animal module so that it takes more user input on the pens in the farm, the
+								life cycle of the animals, and the general animal management strategy the user would like to simulate.
+								Another outcome of this restructuring was that it more modular in nature, making understanding the
+								code easier.</li>
+							<li>I coded the ration formulation as well as manure excretion component calculations for lactating cows.</li>
+							<li>I coded the output files for the animal module, as well as added a feature for a different style of input
+								to the simulation that is more intuitive for the general user.</li>
+							<li>The project has an emphasis on documentation, as we want future developers to be able to easily contribute
+								and users to be able to understand exactly what the simulation is doing.</li>
+						</ul>
+						<br>
+						<p>I presented my work in August, 2019 at the RuFaS annual meeting in New York City to an audience of programmers,
+							the general leaders of the project, and people from the industry who would potentially use the final product.</p>
+						<br>
+						<p>Throughout my time working on this project I have learned a lot about communication. People from universities
+						all over the country work on different aspects of RuFaS and communicating our progress and issues is very important.
+						I attend two biweekly meetings, one being a programmers meeting where we give general updates as well as bring up
+						any issues that are relevant to the whole simulation, and the other being for the overall animal module where
+						we discuss developments in algorithms for calculations.</p>
+					</div>
+
+					<div class="experience-grid-item">
+						<h1>Research Project</h1>
+						<p>August, 2017 - May, 2018</p>
+						<p>Thomas Jefferson High School for Science & Technology (TJHSST)</p>
+					</div>
+
+					<div class="experience-grid-item">
+						<p>During my senior year of high school, I conducted a research project of my own design from start to finish.
+						I analyzed the reading levels of different texts using a formula that I created. I learned a lot about Python,
+						how to conduct computer research, full stack web design, as well as communicating my results. Under the mentorship of my lab director, I
+						regularly practiced presenting my progress to a group. I wrote a paper and created a poster to display the progress
+						I made over the year and I presented my final work
+						at TJStar, an annual symposium to showcase research, hosted by my high school.</p>
+						<p>More technical information can be found <a href="./projects.html">here</a>.</p>
+						<a href="../resources/Reading_Level_Analysis.pdf"><p>Paper</p></a>
+						<a href="../resources/Poster.pdf"><p>Poster</p></a>
+					</div>
+			</div>
 		</div>
 
 		<footer>
