--- a/views/experience.html
+++ b/views/experience.html
@@ -83,8 +83,8 @@
 						I made over the year and I presented my final work
 						at TJStar, an annual symposium to showcase research, hosted by my high school.</p>
 						<p>More technical information can be found <a href="./projects.html">here</a>.</p>
-						<a href="../resources/Reading_Level_Analysis.pdf"><p>Paper</p></a>
-						<a href="../resources/Poster.pdf"><p>Poster</p></a>
+						<a href="../resources/Reading_Level_Analysis.pdf" target="_blank"><p>Paper</p></a>
+						<a href="../resources/Poster.pdf" target="_blank"><p>Poster</p></a>
 					</div>
 			</div>
 		</div>
