location for education

--- a/views/education.html
+++ b/views/education.html
@@ -41,6 +41,7 @@
 						<h2>Cornell University</h2>
 						<h3><strong>School of Engineering</strong>: B.S. Computer Science, Dyson Business minor</h3>
 						<p>August 2018 - May 2022</p>
+						<p>Ithaca, NY</p>
 						<p>Coursework:</p>
 						<ul>
 							<li>Data Structures and Functional Programming (CS 3110)</li>
@@ -64,6 +65,7 @@
 						<h2>Thomas Jefferson High School for Science & Technology (TJHSST)</h2>
 						<h3><strong>Computer Systems</strong>: TJHSST Advanced Diploma</h3>
 						<p>August 2014 - May 2018</p>
+						<p>Alexandria, VA</p>
 						<p>Coursework:</p>
 						<ul>
 							<li>Computer Systems Research Lab</li>
