--- a/views/experience.html
+++ b/views/experience.html
@@ -70,7 +70,7 @@
 					</div>
 
 					<div class="experience-grid-item">
-						<h1>Research Project</h1>
+						<h1>Reading Level Analysis Research Project</h1>
 						<p>August, 2017 - May, 2018</p>
 						<p>Thomas Jefferson High School for Science & Technology (TJHSST)</p>
 					</div>
