all information is up

--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -34,13 +34,13 @@
 		<div class="page-content">
 			<div class="aboutme-grid-container">
 	        <div class="aboutme-grid-item">
-						<p>You can find my resume <a href="../resources/resume.pdf" target="_blank">here</a>.</p>
+						<p><a href="../resources/resume.pdf" target="_blank">Resume</a> | <a href="https://github.com/militsasotirova" target="_blank">GitHub</a> | <a href="mailto: militsasotirova@gmail.com" target="_blank">Email</a> | <a href="https://www.linkedin.com/in/militsa-sotirova-5362a7177" target="_blank">LinkedIn</a></p>
 						<br>
 						<p>Programming Languages:</p>
 						<ul>
 							<li>Java</li>
 							<li>Python</li>
-							<li>Go</li>
+							<li>Golang</li>
 							<li>HTML/CSS</li>
 							<li>familiar with C (MPI)</li>
 						</ul>
@@ -58,7 +58,7 @@
 						More information can be found <a href="./experience.html">here</a>.</p>
 						<br>
 						<p>During my senior year of high school, I conducted a research project from start to finish to create a formula to
-							analyze the reading level of text. More information can be found <a href="./experience.html">here</a>.</p>
+							analyze the reading level of text. More information can be found <a href="./experience.html#reading-level">here</a>.</p>
 						<br>
 						<p>Throughout high school, I taught a class that introduced middle school kids to different STEM topics like the physics
 							of light, aerodynamics, cryptography, architecture, natural disasters, etc. I was also a coach for two swim teams
