--- a/views/experience.html
+++ b/views/experience.html
@@ -75,16 +75,17 @@
 						<p>Thomas Jefferson High School for Science & Technology (TJHSST)</p>
 					</div>
 
-					<div class="experience-grid-item">
+					<div class="experience-grid-item" id="reading-level">
+						<p><strong>Improving Reading Level Evaluations Using Sentence Structure and Word Frequency</strong></p>
 						<p>During my senior year of high school, I conducted a research project of my own design from start to finish.
 						I analyzed the reading levels of different texts using a formula that I created. I learned a lot about Python,
 						how to conduct computer research, full stack web design, as well as communicating my results. Under the mentorship of my lab director, I
 						regularly practiced presenting my progress to a group. I wrote a paper and created a poster to display the progress
 						I made over the year and I presented my final work
-						at TJStar, an annual symposium to showcase research, hosted by my high school.</p>
+						at tjSTAR, an annual symposium to showcase research, hosted by my high school.</p>
+						<br>
 						<p>More technical information can be found <a href="./projects.html">here</a>.</p>
-						<a href="../resources/Reading_Level_Analysis.pdf" target="_blank"><p>Paper</p></a>
-						<a href="../resources/Poster.pdf" target="_blank"><p>Poster</p></a>
+						<p><a href="https://github.com/militsasotirova/reading-level-analysis">GitHub Repo</a> | <a href="../resources/Reading_Level_Analysis.pdf" target="_blank">Paper</a> | <a href="../resources/Poster.pdf" target="_blank">Poster</a> | <a href="https://youtu.be/vwczaF5nrdU" target="_blank">Demo Video Link</a></p>
 					</div>
 			</div>
 		</div>
