--- a/styles/pages.css
+++ b/styles/pages.css
@@ -114,7 +114,7 @@ ul {
   display: grid;
   grid-template-columns: 1fr 6fr;
   justify-content: center;
-  grid-gap: 70px;
+  grid-gap: 50px;
 }
 
 .education-grid-item {
@@ -124,12 +124,10 @@ ul {
 .experience-grid-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  justify-content: center;
   grid-gap: 90px;
 }
 
 .experience-grid-item {
-  margin: auto;
   line-height: 40px;
 }
 
@@ -139,4 +137,23 @@ ul {
 
 .experience-grid-item li {
   line-height: 25px;
+}
+
+.projects-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 50px;
+}
+
+.projects-grid-item {
+  line-height: 40px;
+}
+
+.projects-grid-item p {
+  line-height: 25px;
+}
+
+.formula-image {
+  height: 100px;
+  width: 650px;
 }
