--- a/views/experience.html
+++ b/views/experience.html
@@ -44,7 +44,7 @@
 							on user inputs as well as published research. There are four main modules: animal, soil, manure,
 							and crop, and I primarily work in the animal module. Throughout my time on this project,
 							I have learned a lot. This is an interdisciplinary project, as it is a computer simulation of an
-							animal/farm system. However, even I have no background in animal or farm science, I have been
+							animal/farm system. However, even though I have no background in animal or farm science, I have been
 							able to contribute a significant amount to the code base for the simulation:</p>
 						<ul>
 							<li>I am currently looking into ways of optimizing and parallelizing the code to improve performance.</li>
