--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -51,7 +51,7 @@
 						<br>
 						<p>I am a second year student at Cornell University (Engineering School) pursuing a major in Computer Science
 							and a minor in Business. I've been interested in math and computer science since my freshman year of high school at
-							TJHSST in the DC area. </p>
+							Thomas Jefferson High School for Science and Technology in the DC area. </p>
 						<br>
 						<p>I'm currently working on <strong>Ru</strong>minant <strong>Fa</strong>rm <strong>S</strong>ystems (RuFaS), which
 						is a simulation that models nutrient flow through a farm system based on user inputs as well as published research.
