--- a/views/experience.html
+++ b/views/experience.html
@@ -47,7 +47,9 @@
 							animal/farm system. However, even though I have no background in animal or farm science, I have been
 							able to contribute a significant amount to the code base for the simulation:</p>
 						<ul>
-							<li>I am currently looking into ways of optimizing and parallelizing the code to improve performance.</li>
+							<li>I am currently the project leader of the data management team. We are exploring ways to use SQLite 
+								to store input data as well as persist results for future review (comparison of two runs, version
+								to version comparisons, etc.) I lead meetings on topic and assign weekly tasks to the members of the team.</li>
 							<li>I restructured the entire animal module so that it takes more user input on the pens in the farm, the
 								life cycle of the animals, and the general animal management strategy the user would like to simulate.
 								Another outcome of this restructuring was that it more modular in nature, making understanding the
