--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -41,6 +41,7 @@
 							<li>Java</li>
 							<li>Python</li>
 							<li>Golang</li>
+							<li>OCaml</li>
 							<li>HTML/CSS</li>
 							<li>familiar with C (MPI)</li>
 						</ul>
