--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -40,17 +40,19 @@
 						<ul>
 							<li>Java</li>
 							<li>Python</li>
+							<li>SQL</li>
 							<li>Golang</li>
 							<li>OCaml</li>
+							<li>C/C++</li>
+							<li>JavaScript</li>
 							<li>HTML/CSS</li>
-							<li>familiar with C (MPI)</li>
 						</ul>
 					</div>
 
 					<div class="aboutme-grid-item">
 						<p>Hello!</p>
 						<br>
-						<p>I am a second year student at Cornell University (Engineering School) pursuing a major in Computer Science
+						<p>I am a third year student at Cornell University (Engineering School) pursuing a major in Computer Science
 							and a minor in Business. I've been interested in math and computer science since my freshman year of high school at
 							Thomas Jefferson High School for Science and Technology in the DC area. </p>
 						<br>
