--- a/views/education.html
+++ b/views/education.html
@@ -44,6 +44,11 @@
 						<p>Ithaca, NY</p>
 						<p>Coursework:</p>
 						<ul>
+							<li>Distributed Computing Principles (CS 5414)</li>
+							<li>Introduction to Computer Vision (CS 4670)</li>
+							<li>Operating Systems (CS 4410)</li>
+							<li>Introduction to Analysis of Algorithms (CS 4820)</li>
+							<li>Embedded Systems (CS 3420)</li>
 							<li>Data Structures and Functional Programming (CS 3110)</li>
 							<li>Digital Logic and Computer Organization (ENGRD 2300)</li>
 							<li>Object-Oriented Design and Data Structures - Honors (CS 2112)</li>
@@ -52,8 +57,15 @@
 							<li>Linear Algebra for Engineers (MATH 2940)</li>
 							<li>Multivariable Calculus for Engineers (MATH 1920)</li>
 							<li>Mechanics/Electromagnetism (PHYS 1112/2213)</li>
-							<li>Finance (HADM 2250)</li>
+							<br>
+							<li>Introduction to Game Theory (ECON 3801)</li>
+							<li>Futures, Options, and Financial Derivatives (AEM 4210)</li>
+							<li>Market Dynamics, Computer Simulation and Modeling (AEM 4660)</li>
+							<li>Marketing Priinciples (HADM 2410)</li>
 							<li>Financial Accounting (AEM 2210)</li>
+							<li>Finance (HADM 2250)</li>
+							<br>
+							<li>Communicating Digital Identity (ENGRC 3025)</li>
 						</ul>
 					</div>
 
