--- a/views/experience.html
+++ b/views/experience.html
@@ -47,7 +47,7 @@
 							animal/farm system. However, even though I have no background in animal or farm science, I have been
 							able to contribute a significant amount to the code base for the simulation:</p>
 						<ul>
-							<li>I am currently the project leader of the data management team. We are exploring ways to use SQLite 
+							<li>I am currently the project leader of the data management team. We are using SQLite 
 								to store input data as well as persist results for future review (comparison of two runs, version
 								to version comparisons, etc.) I lead meetings on topic and assign weekly tasks to the members of the team.</li>
 							<li>I restructured the entire animal module so that it takes more user input on the pens in the farm, the
@@ -61,8 +61,9 @@
 								and users to be able to understand exactly what the simulation is doing.</li>
 						</ul>
 						<br>
-						<p>I presented my work in August, 2019 at the RuFaS annual meeting in New York City to an audience of programmers,
-							the general leaders of the project, and people from the industry who would potentially use the final product.</p>
+						<p>I presented my work in August, 2019 and August, 2020 at the RuFaS annual meeting to an audience of programmers,
+							the general leaders of the project, and people from the industry who will use the final product in their 
+							company policy decisions.</p>
 						<br>
 						<p>Throughout my time working on this project I have learned a lot about communication. People from universities
 						all over the country work on different aspects of RuFaS and communicating our progress and issues is very important.
